--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,5 @@ License: MIT + file LICENSE
 BugReports: https://github.com/Appsilon/shiny.info/issues
 Encoding: UTF-8
 RoxygenNote: 6.1.1
+Imports:
+    git2r (>= 0.22.1)
