--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(git_info)
 export(infoPanel)
 export(info_panel)
 export(info_value)
+export(inspect_btn_server)
+export(inspect_btn_ui)
 export(powered_by)
 export(render_info_value)
 export(toggle_info)
