description fixed to pass check

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,14 @@
+^codecov\.yml$
+^\.travis\.yml$
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^README\.Rmd$
+^\.[a-zA-Z]*$
+^CHANGELOG\.md$
+^LICENSE\.md$
+^build_readme\.R$
+^ci$
+^circle\.yml$
+^readme_assets$
+^docs$
+^examples$
