--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,11 @@ export(display)
 export(git_info)
 export(powered_by)
 export(version)
-import(git2r)
 import(glue)
 import(shiny)
+importFrom(git2r,commits)
+importFrom(git2r,repository)
+importFrom(git2r,repository_head)
+importFrom(git2r,status)
 importFrom(shiny,a)
 importFrom(shiny,p)
