Added infoPanel as wrapper for info_panel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(busy)
 export(display)
 export(git_info)
 export(infoPanel)
+export(info_panel)
 export(powered_by)
 export(version)
 import(glue)
