--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(display)
 export(git_info)
 export(infoPanel)
 export(info_panel)
+export(info_value)
 export(powered_by)
+export(render_info_value)
 export(version)
 import(glue)
 import(shiny)
@@ -14,5 +16,8 @@ importFrom(git2r,repository)
 importFrom(git2r,repository_head)
 importFrom(git2r,status)
 importFrom(shiny,a)
+importFrom(shiny,createRenderFunction)
+importFrom(shiny,div)
+importFrom(shiny,installExprFunction)
 importFrom(shiny,p)
 importFrom(shiny,tagList)
