--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(info_panel)
 export(info_value)
 export(powered_by)
 export(render_info_value)
+export(toggle_info)
 export(version)
 import(glue)
 import(shiny)
