session info display

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(inspect_btn_server)
 export(inspect_btn_ui)
 export(powered_by)
 export(render_info_value)
+export(render_session_info)
 export(toggle_info)
 export(version)
 import(glue)
