--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,6 @@ jobs:
         config:
         - { os: windows-latest, r: '3.6'}
         - { os: macOS-latest, r: '3.6'}
-        - { os: ubuntu-16.04, r: '3.6', cran: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
         - { os: ubuntu-18.04, r: '3.4', cran: "https://demo.rstudiopm.com/all/__linux__/bionic/latest"}
         - { os: ubuntu-18.04, r: '3.5', cran: "https://demo.rstudiopm.com/all/__linux__/bionic/latest"}
         - { os: ubuntu-18.04, r: '3.6', cran: "https://demo.rstudiopm.com/all/__linux__/bionic/latest"}
@@ -68,4 +67,4 @@ jobs:
       - name: Test coverage
         if: matrix.config.os == 'macOS-latest' && matrix.config.r == '3.6'
         run: |
-          Rscript -e 'covr::codecov()'
+          Rscript -e 'covr::codecov(token = "${{secrets.CODECOV_TOKEN}}")'
