--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,11 @@
 Package: shiny.info
 Type: Package
-Version: 0.1.1
-Authors@R: c(person("Paweł", "Przytuła", email = "pawel@appsilon.com", role = c("aut", "cre")))
+Version: 0.2.0
+Authors@R: c(person("Paweł", "Przytuła", email = "pawel@appsilon.com", role = c("aut")),
+             person("Dominik", "Krzeminski", email = "dominik@appsilon.com", role = c("aut")),
+             person("Jakub", "Nowicki", email = "kuba@appsilon.com", role = c("aut", "cre")))
 Title: Shiny Info
-Description: Displays simple diagnostic information of your Shiny project in the app.
+Description: Displays simple diagnostic information of your Shiny project in the UI of the app.
 License: MIT + file LICENSE
 BugReports: https://github.com/Appsilon/shiny.info/issues
 Encoding: UTF-8
