--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           brew install libgit2
-          Rscript -e "install.packages("Rcpp", repos="https://RcppCore.github.io/drat")"
+          Rscript -e "install.packages('Rcpp', repos='https://RcppCore.github.io/drat')"
 
       - name: Install Linux system dependencies
         if: runner.os == 'Linux'
