--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -1,4 +1,4 @@
-title: SHINY.INFO
+title: shiny.info
 template:
   params:
     bootswatch: yeti
@@ -9,10 +9,10 @@ navbar:
     - icon: fa-home
       href: index.html
       text: "Start"
-  right:
     - icon: fa-file-code-o
       text: "Reference"
       href: reference/index.html
+  right:
     - icon: fa-github fa-lg
       href: https://github.com/Appsilon/shiny.info
     - icon: fa-twitter fa-lg
@@ -33,4 +33,5 @@ reference:
   - '`render_info_value`'
   - '`render_session_info`'
   - '`render_session_info`'
+  - '`toggle_info`'
   - '`version`'
