--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -15,7 +15,7 @@ template:
         gtag('config', 'G-40M98DVYD5');
       </script>
       <!-- Google tag (gtag.js) -->
-      <script async src=“https://www.googletagmanager.com/gtag/js?id=G-FQQZL5V93G”></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-FQQZL5V93G"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
